Completed the documentation for Swaggo
